syntax = "proto3";

option csharp_namespace = "CalculationService";

package calculations;

service Calculate {
  rpc CalculateTimePeriod (CalculateRequest) returns (CalculateResponse);
}

message CalculateRequest {
  int64 from = 1;
  int64 to = 2;
}

message CalculateResponse {
  double average = 1;
  double sum = 2;
  string tenant = 3;
}
